--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:paddingBottom="28dp"
+    android:paddingEnd="24dp"
+    android:paddingStart="24dp"
+    android:paddingTop="28dp"
     android:orientation="horizontal">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/itemTitleView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#666664"
         android:layout_weight="1"
-        android:textSize="16sp"/>
+        android:textSize="20sp"
+        tools:text="Машина"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/itemValueView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:alpha="0.8"
-        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0"
+        android:gravity="right"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#4a90e2"
+        android:textSize="20sp"
+        tools:text="1 000 000 p"
         />
 
 </LinearLayout>
-
