--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3574fa</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimaryDark">#3574fa</color>
+    <color name="colorAccent">#ffc107</color>
     <color name="expenseColor">#03DAD5</color>
     <color name="yellow">#ffc107</color>
     <color name="white">#FFFFFF</color>
