--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -62,7 +62,9 @@
             android:id="@+id/tabContainerView"
             android:layout_width="match_parent"
             android:background="@color/colorPrimary"
-            app:tabIndicatorColor="@color/accentColor"
+            app:tabIndicatorColor="@color/orange"
+            app:tabTextColor="@color/inactiveTextColor"
+            app:tabSelectedTextColor="@android:color/white"
             android:layout_height="48dp" />
 
     </androidx.viewpager.widget.ViewPager>
